# autonomous-fleet-simulator

./: .gitignore  README.md  docker-compose.yml  telemetry.csv  telemetry.jsonl
assets/maps/: sample_city.osm
backend/: Dockerfile  alembic.ini  create_tables.py  requirements.txt  seed.py  test_redis.py  test_script.py
backend/alembic/: env.py
backend/alembic/versions/: 4de6bc98d536_initial_schema.py  6862f5737fdc_add_status_to_telemetry.py  a8da8fd557f4_initial_schema.py  eddb86277b7b_add_battery.py
backend/app/: config.py  logger.py  main.py  test_ws.html
backend/app/api/: dependencies.py  fleet.py
backend/app/cache/: redis_cache.py  redis_client.py
backend/app/database/: database.py  dependencies.py  session.py  unit_of_work.py
backend/app/database/models/: __init__.py  telemetry.py  vehicle.py
backend/app/network/: router.py  udp_command_client.py
backend/app/repositories/: telemetry_repository.py  vehicle_repository.py
backend/app/schemas/: __init__.py  fleet.py  telemetry.py  vehicle.py  vehicle_commands.py
backend/app/services/: base_service.py  fleet_service.py  telemetry_service.py  vehicle_command_service.py
backend/app/telemetry/: server.py
backend/app/test_script/: test_script.py
backend/app/websocket/: broadcaster.py  manager.py  router.py
docs/: architecture.md  decisions.md  phase2.md  phase3.md  roadmap.md  skills.md
frontend/: Dockerfile  package-lock.json
simulator/: CMakeLists.txt
simulator/src/: CollisionManager.cpp  CollisionManager.h  Controller.cpp  Controller.h  FleetManager.cpp  FleetManager.h  Logger.cpp  Logger.h  Map.h  Point.h  Sensor.cpp  Sensor.h  State.h  Vehicle.cpp  Vehicle.h  main.cpp
simulator/src/map/: AStar.h  Edge.h  GeoUtils.h  Graph.cpp  Graph.h  Node.h  OSMParser.cpp  OSMParser.h  RoadGraph.h
simulator/src/network/:  UdpClient.cpp   UdpClient.h  UdpClient.cpp  UdpClient.h  UdpCommandListener.cpp  UdpCommandListener.h
simulator/src/tests/: astar_test.cpp  graph_test.cpp  route_follower_test.cpp
